[gd_scene load_steps=11 format=2]

[ext_resource path="res://Sounds/Popup/ability.mp3" type="AudioStream" id=1]
[ext_resource path="res://assets/ui/menus/abilityPopup/reflect.webm" type="VideoStream" id=2]
[ext_resource path="res://assets/ui/menus/abilityPopup/AbilityPopUp.gd" type="Script" id=3]
[ext_resource path="res://assets/ui/fonts/Roboto-Medium.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/ui/fonts/Roboto-Black.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://assets/ui/keyIcons/leftMouseButton.png" type="Texture" id=6]

[sub_resource type="StyleBoxFlat" id=2]

[sub_resource type="DynamicFont" id=1]
size = 42
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
size = 46
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 31
font_data = ExtResource( 4 )

[node name="AbilityPopUp" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -48.0
margin_top = -72.0
margin_right = 1952.0
margin_bottom = 1428.0
color = Color( 0, 0, 0, 0.780392 )

[node name="ColorRect2" type="ColorRect" parent="."]
margin_left = 568.0
margin_top = 136.0
margin_right = 1344.0
margin_bottom = 952.0
color = Color( 1, 0.447059, 0, 1 )

[node name="Panel" type="Panel" parent="."]
self_modulate = Color( 0.0235294, 0.0235294, 0.0235294, 1 )
margin_left = 576.0
margin_top = 144.0
margin_right = 1336.0
margin_bottom = 944.0
custom_styles/panel = SubResource( 2 )

[node name="VideoPlayer" type="VideoPlayer" parent="Panel"]
margin_right = 760.0
margin_bottom = 504.0
stream = ExtResource( 2 )
autoplay = true

[node name="Headline" type="Label" parent="Panel"]
modulate = Color( 1, 0.596078, 0.239216, 1 )
margin_left = 32.0
margin_top = 536.0
margin_right = 445.0
margin_bottom = 586.0
custom_fonts/font = SubResource( 1 )
valign = 1
uppercase = true

[node name="Button" type="Button" parent="Panel"]
margin_left = 32.0
margin_top = 704.0
margin_right = 294.0
margin_bottom = 770.0
custom_fonts/font = SubResource( 4 )
text = "Continue"

[node name="Explaination" type="Control" parent="Panel"]
margin_left = 32.0
margin_top = 607.0
margin_right = 72.0
margin_bottom = 647.0

[node name="Part1" type="Label" parent="Panel/Explaination"]
margin_right = 96.0
margin_bottom = 37.0
custom_fonts/font = SubResource( 3 )
text = "Press"

[node name="Part2" type="Label" parent="Panel/Explaination"]
margin_left = 160.0
margin_right = 669.0
margin_bottom = 37.0
custom_fonts/font = SubResource( 3 )
text = "at the right time to reflect projectiles"

[node name="ButtonIcon" type="Sprite" parent="Panel/Explaination"]
position = Vector2( 120, 25 )
texture = ExtResource( 6 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )

[connection signal="finished" from="Panel/VideoPlayer" to="." method="_on_VideoPlayer_finished"]
[connection signal="pressed" from="Panel/Button" to="." method="_on_Button_pressed"]
